--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,7 +78,7 @@
             <div class="products-item-weight">{{product.grams}} гр</div>
           </div>
           <div class="products-item-action">
-            <button class="button product-button" (click)="scrollTo(order)">
+            <button class="button product-button" (click)="scrollTo(order, product)">
               <span>Заказать</span>
               <span>
                                 <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -105,7 +105,7 @@
       </div>
       <div class="order-form-inputs" [formGroup]="form">
         <div class="order-form-input" [class]="{'error': form.get('order')?.invalid && (form.get('order')?.dirty || form.get('order')?.touched)}">
-          <input type="text" placeholder="Ваш заказ" id="burger" formControlName="order">
+          <input type="text" placeholder="Выберите товар в списке" id="burger" formControlName="order" readonly>
         </div>
         <div class="order-form-input" [class]="{'error': form.get('name')?.invalid && (form.get('name')?.dirty || form.get('name')?.touched)}">
           <input type="text" placeholder="Ваше имя" id="name" formControlName="name">
